Update background image path in CSS

--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-  background: url(/img/Tibi-WoC116.png) no-repeat;
+  background: url(img/Tibi-WoC116.png) no-repeat;
   height: 1024px;
   background-size: cover;
   font-family: Inter;
