--- a/home.css
+++ b/home.css
@@ -391,6 +391,9 @@ section {
   nav h1 {
     font-size: 36px;
     margin: 0;
+    -webkit-text-stroke: none;
+    text-shadow: 1px 1px 2px rgba(12, 12, 13, 0.5);
+   
   }
 
   .nav-links {
